backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-deployment
  labels:
    app: todoapp
spec:
  selector:
    matchLabels:
      app: todoapp
  replicas: 1
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
        - name: hello
          image: todoapp-backend
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: todoapp-service
spec:
  selector:
    app: todoapp
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
