frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tododeployment
spec:
  selector:
    matchLabels:
      app: todo-front
  replicas: 1
  template:
    metadata:
      labels:
        app: todo-front
    spec:
      containers:
        - name: nginx
          image: todoapp-frontend
          imagePullPolicy: Never
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: todo-front
spec:
  selector:
    app: todo-front
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
