ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-web
spec:
  rules:
    - host: www.todoapp.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todoapp-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todoapp-webservice
                port:
                  number: 80
